--- a/projeto9-cineflex/src/components/filmes/estilos.css
+++ b/projeto9-cineflex/src/components/filmes/estilos.css
@@ -15,12 +15,20 @@
     flex-wrap: wrap;
     overflow-y: scroll;
     margin: 20px;
+    
 }
 
 .filme > img {
     width: 129px;
     height: 193px;
     object-fit: cover;
+}
+
+div .filme:active {
+    cursor: pointer;
+    opacity: 0.2;
+    transition: 0.5s;
+    box-shadow: 7px 7px darken(black, 20%),
 }
 
 .oculto{
